# quizzical

./: .gitignore  LICENSE  README.md  cabal.project  project.vim
Einstufung/: package.cabal
Einstufung/impls/: Tablita.hs
Einstufung/src/: Main.hs
Grammatik/: package.cabal
Grammatik/lib/: Grammatik.hs  Tablita.hsig
Tabelle/: README.md  package.cabal
Tabelle-plaintext/: package.cabal
Tabelle-plaintext/src/Tabelle/: Plaintext.hs
Tabelle-plaintext/tests/: tests.hs
Tabelle/src/: Tabelle.hs
Tabelle/src/Tabelle/: Internal.hs  Klartext.hs
Tabelle/tests/: tests.hs
Tinytable/: LICENSE
Tinytable/src/: Tinytable.hs
Tinytable/src/Tinytable/: Internal.hs  Megaparsec.hs
quizzical/: package.cabal
quizzical/src/: Main.hs
tableparse/: package.cabal
tableparse/src/: Tableparse.hs
tableparse/tests/: tests.hs
tablitas/: ChangeLog.md  package.cabal
tablitas-plaintext/: package.cabal
tablitas-plaintext/src/Tablita/: Plaintext.hs
tablitas-plaintext/tests/: tests.hs
tablitas/lib/: Tablitas.hs
tablitas/src/: Tablita.hs
tablitas/src/Tablita/: Internal.hs
tinytable/: .ghci  package.cabal
tinytable/src/: Tinytable.hs
tinytable/src/Tinytable/: Internal.hs  Megaparsec.hs  SOP.hs
tinytable/tests/: tests.hs
zinytable/: README.md  package.cabal
