name:                Grammatik
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >= 2

library
    exposed-modules:     Grammatik
    signatures:          Tablita
    hs-source-dirs:      lib
    build-depends:       base >= 4.10 && < 4.11,
                         generics-sop >= 0.3.1.0,
                         distributive >= 0.5,
                         adjunctions >= 4.3
    default-language:    Haskell2010
