-- https://jpvillaisaza.github.io/2017/03/14/minimal-cabal-files/
name:                Grammatik
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >= 2

library
    exposed-modules:     Grammatik
    hs-source-dirs:      lib
    build-depends:       base >= 4.10 && < 5,
                         Tabelle == 0.1.0.0
    default-language:    Haskell2010
