-- https://jpvillaisaza.github.io/2017/03/14/minimal-cabal-files/
name:                Tabelle
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=2

library
  exposed-modules:     Tabelle
                       Tabelle.Internal
                       Tabelle.Klartext
  build-depends:       base >=4.10 && <5,
                       generics-sop >= 0.3.1.0,
                       containers >= 0.5.10,
                       distributive >= 0.5,
                       adjunctions >= 4.3,
                       megaparsec >= 6.5.0,
                       text >= 1.2.2.2
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite tests
    type:           
        exitcode-stdio-1.0
    ghc-options:    
        -Wall -threaded
    hs-source-dirs: 
        tests
    main-is:        
        tests.hs
    build-depends:
        base >= 4.10 && < 5,
        tasty >= 0.10.1.1,              
        tasty-hunit >= 0.9.2,
        megaparsec >= 6.5.0,
        text >= 1.2.2.2,
        Tabelle
    default-language:    
        Haskell2010
