name:                tablitas
version:             0.1.0.0
synopsis:            Small tables.
description:         Small tables.
license:             BSD3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          diaz_carrete@yahoo.com
category:            Data Structures
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 2

library
  exposed-modules:     Tablitas
  build-depends:       base >= 4.10 && < 4.11
  hs-source-dirs:      lib
  default-language:    Haskell2010
