-- https://jpvillaisaza.github.io/2017/03/14/minimal-cabal-files/
name:                tablitas
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=2

library
  exposed-modules:     Tablita
                       Tablita.Internal
  build-depends:       base >=4.10 && <4.11,
                       generics-sop >= 0.3.1.0,
                       containers >= 0.5.10,
                       distributive >= 0.5,
                       adjunctions >= 4.3
  hs-source-dirs:      src
  default-language:    Haskell2010
